--- a/Backend/public/dashboard.html
+++ b/Backend/public/dashboard.html
@@ -105,223 +105,59 @@
 
     </div>
 
-    <div class="container-fluid secondary pt-3 pb-3">
+    <div class="container-fluid secondary pt-5 pb-3">
         <div class="container">
             <div class="row d-flex justify-content-between">
                 <div class="col-md-5 dash-inner mb-2 p-3">
-                    <p>Column 1 (size 6)</p>
+                    <p id="total"></p>
                 </div>
                 <div class="col-md-3 mb-2 ">
                     <div class="container mb-2 p-3 dash-inner nested-container">
-                        <p>Nested Container 1</p>
+                        <p id="submitted"></p>
                     </div>
 
                     <div class="container p-3 dash-inner nested-container">
-                        <p>Nested Container 2</p>
+                        <p id="process"></p>
                     </div>
                 </div>
                 <div class="col-md-3 mb-2">
                     <div class="container mb-2 p-3 dash-inner nested-container">
-                        <p>Nested Container 1</p>
+                        <p id="completed"></p>
                     </div>
 
                     <div class="container p-3 dash-inner nested-container">
-                        <p>Nested Container 2</p>
+                        <p id="failed"></p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="container-fluid secondary pb-3">
-        <div class="container">
-            <div class="row d-flex justify-content-between align-items-center">
-                <div class="col-md-6">
-                    <h5>Title</h5>
-                </div>
-                <div class="col-md-3 text-md-end">
-                </div>
-                <div class="col-md-3 px-3">
-                    <div class="input-group">
-                        <form>
-                            <input type="search" placeholder="Search...">
-                            <button class="search" type="submit">Search</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid secondary">
+    <div class="container-fluid secondary py-5" style="height: 40vh;">
         <div class="container">
             <div class="table-responsive">
                 <table class="table rounded">
                     <thead>
                         <tr>
-                            <th style="background-color: #1D1D1D; color: white;">job</th>
-                            <th style="background-color: #1D1D1D; color: white;">Engine</th>
+                            <th style="background-color: #1D1D1D; color: white;">Project Name</th>
                             <th style="background-color: #1D1D1D; color: white;">submited at</th>
-                            <th style="background-color: #1D1D1D; color: white;">started at</th>
-                            <th style="background-color: #1D1D1D; color: white;">completed at</th>
-                            <th style="background-color: #1D1D1D; color: white;">Rendered By</th>
-                            <th style="background-color: #1D1D1D; color: white;">process</th>
                             <th style="background-color: #1D1D1D; color: white;">status</th>
-                            <th style="background-color: #1D1D1D; color: white;">cost</th>
-                            <th style="background-color: #1D1D1D; color: white;">Action</th>
-                            <th style="background-color: #1D1D1D; color: white;"></th>
+                            <th style="background-color: #1D1D1D; color: white;">Completed</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
+                    <tbody id="dataBody">
+                        <!-- <tr>
                             <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
                             <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
                             <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
                             <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
-                            <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
-                            <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
-                            <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
-                            <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
-                            <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
-                            <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
-                        </tr>
-                        <tr>
-                            <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
-                            <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
-                            <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
-                            <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
-                            <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
-                            <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
-                            <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
-                            <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
-                            <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
-                            <td style="background-color: #1D1D1D; color: white;">john@example.com</td>
-                        </tr>
-                        <!-- Add more rows as needed -->
+                        </tr> -->
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
     
-
-    <!-- <div class="container-fluid secondary">
-        <div class="container justify-content-between">
-            <div class="row">
-                <div class="col-md-6 col-lg-3 my-4 text-center" data-aos="flip-left">
-                    <div class="py-2">
-                        <p class="fw-bold h5">Cloud Template</p>
-                    </div>
-                    <div>
-                        <span>
-                            Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                            there live the blind texts.
-                        </span>
-                    </div>
-                    <div class="mt-3 d-flex justify-content-center gap-3">
-                        <div>
-                            <a href="https://twitter.com" target="_blank">
-                                <img src="./Images/twitter-2-svgrepo-com.svg" height="40px" width="40px" alt=""
-                                    srcset="">
-                            </a>
-                        </div>
-                        <div>
-                            <a href="https://facebook.com" target="_blank">
-                                <img src="./Images/facebook-svgrepo-com.svg" height="40px" width="40px" alt=""
-                                    srcset="">
-                            </a>
-                        </div>
-                        <div>
-                            <a href="https://instagram.com" target="_blank">
-                                <img src="./Images/instagram-round-svgrepo-com.svg" height="40px" width="40px" alt=""
-                                    srcset="">
-                            </a>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-md-6 col-lg-3 my-4 text-center" data-aos="flip-right">
-                    <div class="py-2">
-                        <p class="fw-bold h5">Useful Links</p>
-                    </div>
-                    <div class="p-2">
-                        <a href="#" class="text-white text-decoration-none">Company</a>
-                    </div>
-                    <div class="p-2">
-                        <a href="#" class="text-white mb-2 text-decoration-none">Pricing</a>
-                    </div>
-                    <div class="p-2">
-                        <a href="#" class="text-white text-decoration-none">Leadership</a>
-                    </div>
-                    <div class="p-2">
-                        <a href="#" class="text-white text-decoration-none">Blog</a>
-                    </div>
-                    <div class="p-2">
-                        <a href="#" class="text-white text-decoration-none">Contact</a>
-                    </div>
-                </div>
-
-                <div class="col-md-6 col-lg-3 my-4 text-center" data-aos="flip-left">
-                    <div class="py-2">
-                        <p class="fw-bold h5">Navigational</p>
-                    </div>
-                    <div class="p-2">
-                        <a href="#" class="text-white text-decoration-none">Join Us</a>
-                    </div>
-                    <div class="p-2">
-                        <a href="#" class="text-white text-decoration-none">Blog</a>
-                    </div>
-                    <div class="p-2">
-                        <a href="#" class="text-white text-decoration-none">Privacy & Policy</a>
-                    </div>
-                    <div class="p-2">
-                        <a href="#" class="text-white text-decoration-none">Terms & Condition</a>
-                    </div>
-                </div>
-
-                <div class="col-md-6 col-lg-3 my-4" data-aos="flip-right">
-                    <div class="py-2">
-                        <p class="fw-bold h5 text-center">Office</p>
-                    </div>
-
-                    <div class="p-2 d-flex align-items-center gap-4">
-                        <div>
-                            <img src="./Images/location-svgrepo-com.svg" height="20px" width="20px" srcset=""
-                                alt="Location">
-                        </div>
-                        <div>
-                            <span>
-                                203 Fake St. Mountain View, San Francisco, California, USA
-                            </span>
-                        </div>
-                    </div>
-                    <div class="p-2 d-flex align-items-center gap-4">
-                        <div>
-                            <img src="./Images/phone-svgrepo-com.svg" height="20px" width="20px" srcset="" alt="Phone">
-                        </div>
-                        <div>
-                            <span>
-                                +91 9434323454
-                            </span>
-                        </div>
-                    </div>
-                    <div class="p-2 d-flex align-items-center gap-4">
-                        <div>
-                            <img src="./Images/email-1572-svgrepo-com.svg" height="20px" width="20px" srcset=""
-                                alt="Email">
-                        </div>
-                        <div>
-                            <span>
-                                info@yourdomain.com
-                            </span>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div> -->
 
     <div class="footer">
         <div class="container text-center p-4">
